keycloak_userprofile: new module (#8651)
keycloak_userprofile: new keycloak module to manage user profiles (#8651)

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -809,6 +809,8 @@ files:
     maintainers: elfelip
   $modules/keycloak_user_federation.py:
     maintainers: laurpaum
+  $modules/keycloak_userprofile.py:
+    maintainers: yeoldegrove
   $modules/keycloak_component_info.py:
     maintainers: desand01
   $modules/keycloak_client_rolescope.py:
