pipx/pipx_info: refactor doc fragment (#8859)
* pipx/pipx_info: refactor doc fragment

* pipx/pipx_info: refactor common options to module_utils

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -131,6 +131,8 @@ files:
     maintainers: $team_huawei
   $doc_fragments/nomad.py:
     maintainers: chris93111 apecnascimento
+  $doc_fragments/pipx.py:
+    maintainers: russoz
   $doc_fragments/xenserver.py:
     labels: xenserver
     maintainers: bvitnik
