cmd_runner_fmt: refactor out to its own file (#8964)
* cmd_runner_fmt: refactor out to its own file

* add new file to BOTMETA.yml

* add changelog frag

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -310,6 +310,8 @@ files:
     labels: module_utils
   $module_utils/btrfs.py:
     maintainers: gnfzdz
+  $module_utils/cmd_runner_fmt.py:
+    maintainers: russoz
   $module_utils/cmd_runner.py:
     maintainers: russoz
   $module_utils/deps.py:
