ipa_getkeytab: Create module (#8938)
* Add ipa_getkeytab

* Parameters fix

* PR fixes

* PR fixes 2

* Fix unit tests

* Fix doc and unit tests

* Fix doc

* Fix doc 2

* Fix doc 3

* PR fixes

* PR fixes 2

* Fix name

* Fix description typo

* Fix variable names

* Update tests

* Add man reference

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -716,6 +716,8 @@ files:
   $modules/ipa_:
     maintainers: $team_ipa
     ignore: fxfitz
+  $modules/ipa_getkeytab.py:
+    maintainers: abakanovskii
   $modules/ipa_dnsrecord.py:
     maintainers: $team_ipa jwbernin
   $modules/ipbase_info.py:
