Add zypper_repository_info module (#8778)
* Adding the list-option for reading the registered repodata

* adding a parameter list
* if the parameter is set, return the output (as a dictionary)
* adjusting the documentation for the new parameter

* Adding changelot-fragment

and link to the issue in the issue-tracker https://github.com/ansible-collections/community.general/issues/8777

* Adding description and example for the new list parameter

* Adding type for new parameter list to argument_spec

* Revert "Adding type for new parameter list to argument_spec"

This reverts commit 6b86e8ba447a9b53e434c79d33c7fe260485b342.

* Revert "Adding description and example for the new list parameter"

This reverts commit db06dafb958f6aeffa38adeee85623904b26bbb1.

* Adding a new module for reading the list of regiestered repositories

I created a new module for reading the repositories based on a sub-procedure from the existing zypper_repository

* Removing the changes to module zypper_repository

because the list-option is not supposed to go into this module

* removing the last change from the zypper_repository module

* Fixing linter errors

Adding extra lines before definitions
adding the missing dash in the documentation
removing the unused imports

* Adding maintainer under BOTMETA, adding test and fixing suggestions

I added the maintainer to BOTMETA
I applied the suggestions on the code form the review
I added a test for the new module to the existing zypper_repository-tests

* Adding maintainer under BOTMETA, adding test and fixing suggestions

I added the maintainer to BOTMETA
I applied the suggestions on the code form the review
I added a test for the new module to the existing zypper_repository-tests

* Deleting the fragment because this will be created automatically

I deleted the fragment because this will be created automatically based on the short_description and version_added

* removing foreign commits fro

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -1441,6 +1441,9 @@ files:
     maintainers: $team_suse
   $plugin_utils/ansible_type.py:
     maintainers: vbotka
+  $modules/zypper_repository_info.py:
+    labels: zypper
+    maintainers: $team_suse TobiasZeuch181
   $plugin_utils/keys_filter.py:
     maintainers: vbotka
   $plugin_utils/unsafe.py:
