--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -16,6 +16,7 @@ action_groups:
     - consul_token
   proxmox:
     - proxmox
+    - proxmox_backup
     - proxmox_disk
     - proxmox_domain_info
     - proxmox_group_info
